<resources>
    <string name="app_name">Stark Industries</string>
    <string name="title_home">Home</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_routines">Routines</string>

    <string name="TitleRoom">Room</string>
    <string name="EmptyRegionText">Oops, there are no rooms in this region...</string>
    <string name="EmptyRoomText">Oops, there are no devices here...</string>
    <string name="EmptyRoutinesText">you haven\'t created any routines yet</string>
    <string name="EmptyHouseText">There are no regions in the house</string>

    <string name="defaultAPIEndpoint">
        http://10.0.2.2:8080/api
    </string>
    <string name="newEndpointText">API Updated!</string>
    <string name="newEndpointUndo">Undo</string>
    <string name="EndpointError">Endpoint Invalid</string>
    <string name="FavouritesDevicesTitle">Favourite Devices</string>
    <string name="FavDevicesTitle">Favorite Routines</string>
    <string name="APIEndpointHint">API endpoint</string>
    <string name="TextBtnDone">Done</string>
    <string name="TextBtnCancel">cancel</string>
    <string name="APIEndpointTitle">Enter the API URL</string>

</resources>
