<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:minWidth="400dp"
    android:padding="10dp">


    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/APIEndpointTitle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <EditText
            android:id="@+id/changeEndpointInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="@string/APIEndpointHint"
            android:inputType="textUri" />

        <Button
            android:id="@+id/changeEndpointBtnReloadEnpoint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.9"
            android:foreground="@drawable/ic_settings_backup_restore_black_24dp"
            android:foregroundGravity="center"
            android:scaleX="1"
            android:scaleY="1"></Button>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        >

        <Button
            android:id="@+id/changeEndpointBtnDone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/TextBtnDone" />

        <Button
            android:id="@+id/changeEndpointBtnCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/TextBtnCancel" />
    </LinearLayout>
</LinearLayout>