<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.hci.StarkIndustries.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_room"
            app:destination="@id/room" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.hci.StarkIndustries.ui.favourites.FavouritesFragment"
        android:label="@string/title_favorites"
        tools:layout="@layout/fragment_favourites" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.hci.StarkIndustries.ui.Routines.RoutinesFragment"
        android:label="@string/title_routines"
        tools:layout="@layout/fragment_routines" />
    <fragment
        android:id="@+id/room"
        android:name="com.hci.StarkIndustries.ui.Room.RoomFragment"
        android:label="fragment_room"
        tools:layout="@layout/fragment_room" >
        <argument
            android:name="RoomID"
            app:argType="string" />
        <action
            android:id="@+id/action_room_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>

</navigation>